<resources>
    <string name="app_name">ranchRatings_1.2</string>
    <string name="profile_heading">Profile</string>
    <string name="profile_greeting">Welcome, Please siign in</string>
    <string name="profile_sign_in">sign in</string>
    <string name="profile_create_account">Create Account</string>
    <string name="main_heading">Ranch Ratings</string>
    <string name="main_see_more">See What\'s Good</string>
    <string name="details_heading">Ranch Details</string>
    <string name="details_name_label">Ranch Name:</string>
    <string name="detail_rating_label">Ranch Rating:</string>
    <string name="detail_description_label">Ranch Description:</string>
</resources>